force-app/main/default/src/objects/HealthCloudGA__OpportunityReferralRecordType__mdt/HealthCloudGA__OpportunityReferralRecordType__mdt.object-meta.xml
<CustomObject>
    <description>Defines the Record Type for Opportunity Referrals in Health Cloud</description>
    <label>Opportunity Referral Record Type</label>
    <pluralLabel>Opportunity Referral Record Types</pluralLabel>
</CustomObject>