force-app/main/default/src/objects/HealthCloudGA__OpportunityReferralRecordType__mdt/fields/HealthCloudGA__Active__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>