force-app/main/default/src/objects/HealthCloudGA__OpportunityReferralRecordType__mdt/fields/HealthCloudGA__OpportunityRecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__OpportunityRecordTypeName__c</fullName>
    <description>Name of record type on Opportunity object which is valid for Health Cloud</description>
    <label>Opportunity Record Type Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>