force-app/main/default/src/objects/HealthCloudGA__OpportunityReferralRecordType__mdt/fields/HealthCloudGA__OpportunityReferralRecordTypeNamespace__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__OpportunityReferralRecordTypeNamespace__c</fullName>
    <description>Opportunity referral record type namespace.</description>
    <label>Record Type Namespace</label>
    <length>15</length>
    <type>Text</type>
</CustomField>